--- a/FINAL UF-1842/estilo.css
+++ b/FINAL UF-1842/estilo.css
@@ -124,6 +124,9 @@ display: flex;
     height: 10%;
     width: 20%;
     padding-bottom: 10px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
 }
     /* CLASE INFORMACION */
 
@@ -140,7 +143,7 @@ display: flex;
 }
 
 .informacion img{
-    margin-top: -25px;
+    /* margin-top: -25px; */
 }
 
 .informacion button{
@@ -153,6 +156,7 @@ display: flex;
     height: 10%;
     font-size: 1.5em;
     margin: auto;
+  
 
 }
 
@@ -182,4 +186,18 @@ footer p{
 
 
 
-    
+/* CSS DE LA PAGINA DE CONTACTO */
+
+.acceder p{
+
+    color: white;
+    font-size: 2em;
+}
+
+
+/* CSS DE CONTACTO */
+
+
+
+
+
