--- a/EJERCICIOS/uf-1844/110823-act-2/CSS/estilos.css
+++ b/EJERCICIOS/uf-1844/110823-act-2/CSS/estilos.css
@@ -59,11 +59,11 @@ header button{
     background-color: rgb(237, 152, 152);
     width: 30%;
     border-radius: 20px;
-    /* padding-left: 150px; */
     display: flex;
     flex-direction: column;
-    font-size: 1em;
+    /* font-size: 1em; */
     justify-content: space-around;
+  
     
 }
 
@@ -73,21 +73,29 @@ header button{
     align-items: center;
     justify-content: center;
     padding-left: 10px;
-
- 
     font-size: 2em;
-    height: 100%;
+    height: 50%;
     text-align: center;
    
 
 
 }
-#acciones{
+.prueba{
 
     background-color: rgb(72, 51, 51);
-    width: 70%;
+    width: 100%;
     border-radius: 20px;
 }
+/* 
+#acciones1{
+
+    background-color: rgb(72, 51, 51);
+    width: 100%;
+    border-radius: 20px;
+} */
+
+
+
 
 /* FINAL DE LA SECCION CENTRAL*/
 
